cargo-features = ["codegen-backend"]

[package]
name = "hack2"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[unstable]
codegen-backend = true

[profile.dev]
codegen-backend = "cranelift"

[profile.release]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-C", "link-arg=-fuse-ld=/usr/bin/mold",
    # (Nightly) Make the current crate share its generic instantiations
    "-Zshare-generics=y",
    "-C", "target-cpu=native"
]

[dependencies]
glam = "0.29.0"
image = "0.25.4"
rand = "0.8.5"
rayon = "1.10.0"
